--- a/install_tutorial.Rmd
+++ b/install_tutorial.Rmd
@@ -19,10 +19,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ![](img/Rlogo_90.png)
 
 `R` is available for free for Windows, GNU/Linux and MacOS.  
-As for now, the latest version is `3.2.5`.
+As for now, the latest version is `3.3.0`.
 
 One common complain about `R` is the frequency of updates. True, but that could be sorted out
-by a good **package manager**
+by a good **package manager**. Of note, the major update (`3.3`, early May 2016) is done on a yearly basis. And only this one forces you to reinstall extra-packages. 
 
 ### Windows
 
@@ -53,9 +53,11 @@ brew update; brew upgrade
 ### GNU/Linux
 
 Any Linux distributions is bundled with a great package manager such as `dpkg` or `rpm`.
+Visit the appropriate webpage for your distribution [here](http://cran.us.r-project.org/bin/linux/).
 
+After you get the correct entry in your package manager, it should quite easy
 ```{r, eval=FALSE}
-sudo apt-get install r-base
+sudo apt-get install r-base r-base-dev
 ```
 
 
@@ -75,7 +77,7 @@ They are 4 main panels in rstudio, but as the top-left is for scripting, the lay
 
 ![](img/rstudio_blank_700.png)
 
-### install R packages
+### install R packages from the Comprensive R Archive Network (CRAN)
 
 On the bottom-right panel, 5 tabs are present:
 
@@ -86,7 +88,7 @@ On the bottom-right panel, 5 tabs are present:
 - Viewer
 
 Click on the `Packages` tab (1.) and select the select the `Install` button (2.)
-and type `dplyr, tidyr, ggplot2, ggrepel, devtools, broom, purrr, shiny, readr, readxl, d3heatmap, stringr` in (3.)
+and type `dplyr, tidyr, ggplot2, ggrepel, devtools, broom, purrr, shiny, readr, readxl, d3heatmap, stringr, rmarkdown, knitr` in (3.)
 
 ![](img/install_packages_300.png)
 
@@ -95,6 +97,13 @@ It takes time, usually 10 seconds to 5 minutes for one package depending on its 
 Those packages could also be installed in the console, the bottom-left panel.
 Example here for installing `devtools`
 ![](img/install_console_200.png)
+
+Of note, `devtools` is handy when you want to install development version, for example if a bug was fixed 
+but the package not yet submitted to CRAN.
+
+```{r, eval=FALSE}
+devtools::install_github("hadley/dplyr")
+```
 
 
 #### A note about package updates
@@ -117,6 +126,7 @@ we could save time and install the necessary packages before the workshop.
 Copy / paste the following the console.
 ```{r, eval=FALSE}
 source("https://bioconductor.org/biocLite.R")
+# to install the version 3.3 of the bioconductor installer.
 biocLite(c("limma", "Biobase", "GEOquery"))
 ```
 
@@ -141,7 +151,7 @@ library("dplyr", warn.conflicts = FALSE)
 theme_set(theme_bw(14))
 
 mtcars %>%
-  add_rownames(var = "car_name") %>%
+  tibble::rownames_to_column(var = "car_name") %>%
   gather(key, value, c(drat, wt)) %>%
   ggplot(aes(x = value, y = mpg, colour = key))+
   geom_point()+
