--- a/lecture_day1-beginner.Rmd
+++ b/lecture_day1-beginner.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "R workshop"
 author: "Aurélien Ginolhac"
-date: "26 May 2016"
+date: "2nd June 2016"
 output:
   ioslides_presentation:
     logo: img/uni.png
@@ -13,7 +13,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## R workshop | Day 1
+## R workshop | Day 1 - beginner
 
 
 
