--- a/lecture_day2-advanced.Rmd
+++ b/lecture_day2-advanced.Rmd
@@ -124,4 +124,20 @@ models %>%
   facet_wrap(~ country)
 ```
 
+## All in all
+
+
+```{r}
+models %>%
+  unnest(tidy) %>%
+  select(continent, country, rsq, term, estimate) %>%
+  #filter(continent != "Africa") %>%
+  spread(term, estimate) %>%
+  ggplot(aes(x = `(Intercept)`, y = year1950))+
+  geom_point(aes(colour = continent, size = rsq))+
+  geom_smooth(se = FALSE)+
+  scale_size_area()+
+  labs(x = "Life expectancy (1950)",
+       y = "Yearly improvement")
+```
 
