--- a/install_tutorial.Rmd
+++ b/install_tutorial.Rmd
@@ -84,7 +84,7 @@ On the bottom-right panel, 5 tabs are present:
 - Help
 - Viewer
 
-Click on the `Packages` tab (1.) and select the select the `Install` button (2.). Type `dplyr, tidyr, ggplot2, ggrepel, devtools, broom, purrr, shiny, readr, readxl, d3heatmap, stringr, rmarkdown, knitr` in (3.)
+Click on the `Packages` tab (1.) and select the `Install` button (2.). Type `dplyr, tidyr, ggplot2, ggrepel, devtools, broom, purrr, shiny, readr, readxl, d3heatmap, stringr, rmarkdown, knitr` in (3.)
 
 ![](img/install_packages_300.png)
 
@@ -113,7 +113,7 @@ But, you should rather use the green `Update` button next to the `Install` (loca
 
 ### install bioconductor packages
 
-The [bioconductor](https://www.bioconductor.org/) resource will be detailed later, but to save time, copy / paste the following code into the consoleto install the necessary packages before the workshop:
+The [bioconductor](https://www.bioconductor.org/) resource will be detailed later, but to save time, copy / paste the following code into the console to install the necessary packages before the workshop:
 
 ```{r, eval=FALSE}
 source("https://bioconductor.org/biocLite.R")
