--- a/lecture_day2-intermediate.Rmd
+++ b/lecture_day2-intermediate.Rmd
@@ -7,131 +7,11 @@ output:
     css: style.css
     logo: img/uni.png
     smaller: yes
-  slidy_presentation: default
 ---
 
 ```{r setup, include=FALSE}
-library(dplyr)
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 ```
-
-## R workshop | Day 1 - beginner
-
-## Why learn R? {.build}
-
-- Free!
-- Packages
-- Community
-
-<img src="img/r_community_450.png">
-
-
-## Packages | as easy as `apt` and yes frequent updates
-
-
-<div class="columns-2">
-- CRAN, reliable many checks when submitting
-
-![](img/install_packages_300.png)
-
-- [GitHub](https://github.com/) using [devtools](https://github.com/hadley/devtools). Check [status](https://github.com/hadley/readr)
-
-```{r, eval=FALSE}
-# install.packages("devtools")
-devtools::install_github("hadley/readr")
-```
-
-- [bioconductor](https://www.bioconductor.org/). Check [status](https://www.bioconductor.org/packages/release/bioc/html/limma.html)
-```{r, eval=FALSE}
-source("https://bioconductor.org/biocLite.R")
-biocLite("limma")
-```
-
-![](img/install_console_200.png)
-
-</div>
-
-
-# More and more packages
-
-![](img/packages_vs_r_version.jpg)
-
-[source: Andrie de Vries](http://blog.revolutionanalytics.com/2016/04/cran-package-growth.html)
-
-## Pipeline goal
-
-[David Robinson](http://varianceexplained.org/) summarized the goal on his laptop
-
-<img src="img/drob_r_pipeline_600.jpg">
-
-## Period of much suckiness
-
-```{r, echo=FALSE}
-#devtools::install_github("ijlyttle/vembedr")
-library("vembedr")
-suppressPackageStartupMessages(library("dplyr"))
-embed_youtube("8SGif63VW6E")
-```
-
-## Period of much suckiness
-
-> Whenever you’re learning a new tool, for a long time you’re going to suck...</br>
-> But the good news is that it's typical, that’s something that happens to everyone, and it’s only temporary.</br>
-> -- <cite>[Hadley Wickham][1]</cite>
-
-[1]:https://youtu.be/8SGif63VW6E?t=4m12s
-# Rstudio | Integrated Development Editor
-
-## Layout, 4 panels
-
-<img src="img/rstudio_layout_850.png">
-
-## Features
-
-- Package management
-- Console to run R, with syntax highligther
-- Editor to work with scripts / markdown
-- autocompletion using TAB
-- Cheatsheets
-- Keyboard shortcuts
-
-# Chaining
-
-## The pipe operator %>%
-
-[magrittr by Stefan Milton Bache](https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html)
-
-Compare
-```{r}
-set.seed(124)
-x <- rnorm(10)
-mean(x)
-round(mean(x), 3)
-```
-
-with
-```{r}
-set.seed(124)
-rnorm(10) %>% mean %>% round(3)
-```
-
-Easy to read, natural from left to right.
-
-Even better with **one** instruction per line and **indentation**
-```{r}
-set.seed(124)
-rnorm(10) %>%
-  mean %>%
-  round(3)
-```
-
-# tidyr
-
-
-## Concept
-
-
-
 
 # dplyr
 
@@ -625,104 +505,9 @@ flights %>%
 
 
 
-
-
-## Reading data
-
-
-```{r}
-library("readr")
-df <- read_tsv("women.tsv", col_names = TRUE)
-df
-```
-
-## Reading data 2/3
-
-
-Using `Rstudio`, right bottom panel. Select the **folder**
-
-<img src="img/rstudio_explorer.png">
-
-## Reading data 2/3
-
-When the **folder** is selected and its content displayed, tell `R` to use this location (alternative to `setwd(/path/to/location)`). Press the `More` menu and click on
-
-`Set As Working Directory`
-
-<img src="img/rstudio_setwd.png">
-
-
-## Reading data 3/3
-
-
-Using `Rstudio`, right top panel. Select directly your **file**
-
-<img src="img/rstudio_import.png">
-
 ## Coding style
 
 
 `R` is rather flexible and permissive with its syntax. Howwver, being more strict tends to ease the debugging process.
 
 See [Hadley's recommendations](http://adv-r.had.co.nz/Style.html)
-
-
-
-## Plotting
-
-Overview
-
-Switch from "wide" format to "long" format
-
-
-See "tidy-data-playbook" by [Garrett Grolemund](http://garrettgman.github.io/tidying/)
-
-Example
-
-
-```{r}
-head(iris, 5)
-dim(iris)
-```
-
-```{r}
-library("tidyr")
-iris.melt <- gather(iris, petal, value, 3:4)
-dim(iris.melt)
-head(iris.melt, 5)
-```
-
-## Why is this useful?
-
-```{r}
-library("tidyr")
-iris %>%
-  gather(petal, value, 3:4) %>%
-  ggplot()+
-  geom_boxplot(aes(x = Species, y = value, fill = petal))
-```
-
-![](https://faculty.elgin.edu/dkernler/statistics/ch03/images/boxplot.gif)
-
-
-## Barplots
-
-```{r, out.width='450px', out.height='450px'}
-library("tidyr")
-gather(iris, leaf, value, 1:4) %>%
-  ggplot()+
-  geom_bar(aes(x = Species, y = value, fill = leaf), stat = "identity")
-```
-
-<a href = "http://rvisualization.com/ggplot2-overview-2/">
-
-## Recommended reading
-
-Excellent ressource about `R` (in French) by [Ewen Gallic](http://egallic.fr/Enseignement/R/m1_stat_eco_logiciel_R.pdf)
-
-## Acknowledgments
-
-Hadley
-Ewen
-Simon
-David 
